# ora-sql-builder

./: AI_FRIENDLY_SYSTEM_BUILD_GUIDE.md  Cargo.toml  ENGINE_LAYER_OVERVIEW.md  EXECUTION_LAYER_OVERVIEW.md  METADATA_LAYER_OVERVIEW.md  METADATA_LAYER_TESTING_METHOD.md  PERFORMANCE_TESTING_METHOD.md  PLAN.md  PROJECT_STATUS_AND_ROADMAP.md
examples/: metadata_driver.rs  metadata_execution.rs  metadata_governance.rs  metadata_persistence.rs  metadata_plan.rs  metadata_schema.rs  mysql_crud.rs  oracle_crud.rs  postgres_crud.rs  sqlite_crud.rs  sqlserver_crud.rs  supported_datasources.json
src/: engine.rs  execution.rs  lib.rs  metadata.rs  metadata_demo.rs  metadata_driver.rs  metadata_mapping.rs  metadata_plan.rs  portal_provider.rs  portal_provider_adapter.rs  sql.rs
src/engine/: builders.rs  ddl.rs  dialect.rs  facade.rs  mod.rs  query.rs  tests.rs
src/execution/: context.rs  datasource.rs  error.rs  executors.rs  helpers.rs  mod.rs  results.rs  tests.rs
src/metadata/: catalog.rs  common.rs  field.rs  filters.rs  mod.rs  query.rs  schema.rs
src/metadata_driver/: context.rs  driver.rs  filters.rs  helpers.rs  mod.rs  tests.rs
src/metadata_mapping/: codes.rs  mapper.rs  mod.rs  snapshot.rs  tests.rs
src/metadata_plan/: mod.rs  permission.rs  query.rs  schema.rs  tests.rs  write.rs
src/portal_provider/: helpers.rs  mod.rs  tests.rs  types.rs
src/sql/: explorer.rs  mod.rs  provider.rs  statement.rs  tests.rs
tests/: metadata_stability.rs
