[package]
name = "ora-sql-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = "1.0.104"
wildmatch = "2.1.1"
schemars = "0.8.13"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "any", "sqlite", "postgres", "mysql"] }

[dev-dependencies]
similar-asserts = "1.4.2"